--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-19 [点亮希望的曙光 澳大利亚与新西兰开通彼此间免隔离检疫旅行](/articles/voa/1041418.md)
+
 4-19 [疫苗护照美国滞碍难行 群体免疫道阻且长](/articles/voa/1041419.md)
 
 4-19 [俄罗斯驱逐20名捷克外交官](/articles/voa/1041420.md)
@@ -598,6 +600,4 @@
 4-6 [新一波纪录片为性侵犯幸存者发声](/articles/voa/1041716.md)
 
 4-6 [拜登两万亿基础设施建设提案面临挑战](/articles/voa/1041717.md)
-
-4-6 [中国效仿克里姆林宫的“信息战”手法](/articles/voa/1041718.md)
 
