--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+4-19 [豪门球队另创超级联赛 欧洲足总扬言祭禁令 – 法国国际广播电台 - RFI](/articles/rfi/1031566.md)
+
+4-19 [12豪门另创超级联赛 挑战UEFA体制 – 法国国际广播电台 - RFI](/articles/rfi/1031567.md)
+
 4-19 [古巴今天宣布卡内尔将接任劳尔•卡斯特罗担任共产党第一书记](/articles/rfi/1031568.md)
 
 4-19 [阿德巴约哨前2秒出手建功 热火险胜篮网 – 法国国际广播电台 - RFI](/articles/rfi/1031569.md)
@@ -596,8 +600,4 @@
 4-14 [德防长：印太重要战略地区 德日将深化军事关系](/articles/rfi/1031864.md)
 
 4-14 [吉布提外海船难 42名非法移民丧生](/articles/rfi/1031865.md)
-
-4-14 [不理会接种娇生疫苗出现血栓 欧股收高 – 法国国际广播电台 - RFI](/articles/rfi/1031866.md)
-
-4-14 [接种娇生疫苗后出现血栓 美国1人不治 – 法国国际广播电台 - RFI](/articles/rfi/1031867.md)
 
