--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+4-19 [法国网球公开赛 费德瑞证实将出赛 – 法国国际广播电台 - RFI](/articles/rfi/1031563.md)
+
+4-19 [捍卫阿富汗撤军决定 美：威胁已转移 – 法国国际广播电台 - RFI](/articles/rfi/1031564.md)
+
+4-19 [12豪门另创超级联赛 国际足总不赞成 – 法国国际广播电台 - RFI](/articles/rfi/1031565.md)
+
 4-19 [豪门球队另创超级联赛 欧洲足总扬言祭禁令 – 法国国际广播电台 - RFI](/articles/rfi/1031566.md)
 
 4-19 [12豪门另创超级联赛 挑战UEFA体制 – 法国国际广播电台 - RFI](/articles/rfi/1031567.md)
@@ -594,10 +600,4 @@
 4-14 [拒签效忠声明    港府要129公务员退休](/articles/rfi/1031861.md)
 
 4-14 [纽约和华盛顿DC暂停强生疫苗接种](/articles/rfi/1031862.md)
-
-4-14 [俄防长：军事演习是因应北约军事威胁](/articles/rfi/1031863.md)
-
-4-14 [德防长：印太重要战略地区 德日将深化军事关系](/articles/rfi/1031864.md)
-
-4-14 [吉布提外海船难 42名非法移民丧生](/articles/rfi/1031865.md)
 
