--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,16 @@
 法广
 ------
 
+4-19 [港府要求于指定期间身处3个指明地方人士须检测](/articles/rfi/1031558.md)
+
+4-19 [人民日报批港大学生会抹黑一国两制](/articles/rfi/1031559.md)
+
+4-19 [美最高龄人瑞116岁辞世 长寿秘诀：好好生活 – 法国国际广播电台 - RFI](/articles/rfi/1031560.md)
+
+4-19 [美国最高龄人瑞辞世 享嵩寿116岁 – 法国国际广播电台 - RFI](/articles/rfi/1031561.md)
+
+4-19 [Tesla汽车德州撞树酿2死 警：驾驶座上没人 – 法国国际广播电台 - RFI](/articles/rfi/1031562.md)
+
 4-19 [法国网球公开赛 费德瑞证实将出赛 – 法国国际广播电台 - RFI](/articles/rfi/1031563.md)
 
 4-19 [捍卫阿富汗撤军决定 美：威胁已转移 – 法国国际广播电台 - RFI](/articles/rfi/1031564.md)
@@ -590,14 +600,4 @@
 4-14 [24小时增16万病例，印度急用俄罗斯新冠疫苗](/articles/rfi/1031856.md)
 
 4-14 [布林肯火速重返欧洲面对第二敌手俄罗斯 - 要闻分析](/articles/rfi/1031857.md)
-
-4-14 [卢比奥：拜登气候特使克里前往中国是给北京送大礼](/articles/rfi/1031858.md)
-
-4-14 [卡斯泰：法国中断所有往返巴西航班](/articles/rfi/1031859.md)
-
-4-14 [美防长访德    宣布增派五百名驻德美军](/articles/rfi/1031860.md)
-
-4-14 [拒签效忠声明    港府要129公务员退休](/articles/rfi/1031861.md)
-
-4-14 [纽约和华盛顿DC暂停强生疫苗接种](/articles/rfi/1031862.md)
 
