--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,7 +1,11 @@
 中国数字时代
 ------
 
+4-19 [鉴闻｜货车司机生存困境：吃住在车上数月不回家，运费被扣轮胎被偷](/articles/cdt/383531.md)
+
 4-19 [澎湃新闻｜75岁退休干警犯诽谤等罪获刑12年：发帖恶意攻击当地领导](/articles/cdt/383536.md)
+
+4-19 [【CDT周报】第十三期：我心目中的中国应该是一个充满公平正义的国家](/articles/cdt/383537.md)
 
 4-19 [【CDTV】墙国蛙蛤蛤｜温家宝文章墙内遭禁，只因处处高级黑习近平？！](/articles/cdt/383539.md)
 
@@ -596,8 +600,4 @@
 3-18 [德国之声 | 欧盟同意就新疆人权问题制裁中国官员](/articles/cdt/384877.md)
 
 3-18 [自由亚洲 | Signal疑被墙 中国计划出新规筑更高的墙](/articles/cdt/384879.md)
-
-3-18 [非常魏道｜学者可以无耻到什么地步？康震的“正能量”还真吓着我了](/articles/cdt/384881.md)
-
-3-17 [【弄个大新闻】为了说服自己的父母，年轻人决定用微信公号“以毒攻毒”](/articles/cdt/384906.md)
 
