--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-19 [印度新冠病例单日新病例超过26万 美国半数成年人接种了至少一剂疫苗](/articles/voa/1041417.md)
+
 4-19 [点亮希望的曙光 澳大利亚与新西兰开通彼此间免隔离检疫旅行](/articles/voa/1041418.md)
 
 4-19 [疫苗护照美国滞碍难行 群体免疫道阻且长](/articles/voa/1041419.md)
@@ -598,6 +600,4 @@
 4-6 [科技公司扫除虚假信息面临两难](/articles/voa/1041715.md)
 
 4-6 [新一波纪录片为性侵犯幸存者发声](/articles/voa/1041716.md)
-
-4-6 [拜登两万亿基础设施建设提案面临挑战](/articles/voa/1041717.md)
 
