--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+4-19 [刘长乐售出凤凰卫视所有股份  中资加快港媒“央企化”步伐](/articles/rfa/1045833.md)
+
+4-19 [陕西律师常玮平被捕遭异地羁押  余文生狱中遭群殴](/articles/rfa/1045834.md)
+
 4-17 [拜登菅义伟结束会谈  双方同意维护台海和平](/articles/rfa/1045835.md)
 
 4-17 [李怀庆二审多处程序违法    耿和担心高智晟已被迫害致死](/articles/rfa/1045836.md)
@@ -596,8 +600,4 @@
 3-18 [小米禁令被驳回  其它公司或步小米后尘](/articles/rfa/1046131.md)
 
 3-18 [考不上本科智商有问题? 中国的招聘鄙视链](/articles/rfa/1046132.md)
-
-3-18 [美国高官到访韩国      韩国会否加入“抗中联盟”？](/articles/rfa/1046133.md)
-
-3-18 [抵制冬奥并非首选  有人提出其它选项](/articles/rfa/1046134.md)
 
