--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-19 [中共党报发文警告港大学生会会长：等待你的只有监牢和手铐](/articles/voa/1041416.md)
+
 4-19 [印度新冠病例单日新病例超过26万 美国半数成年人接种了至少一剂疫苗](/articles/voa/1041417.md)
 
 4-19 [点亮希望的曙光 澳大利亚与新西兰开通彼此间免隔离检疫旅行](/articles/voa/1041418.md)
@@ -598,6 +600,4 @@
 4-6 [中国海军：航母编队在台湾周边训练将会常态化](/articles/voa/1041714.md)
 
 4-6 [科技公司扫除虚假信息面临两难](/articles/voa/1041715.md)
-
-4-6 [新一波纪录片为性侵犯幸存者发声](/articles/voa/1041716.md)
 
