--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,10 @@
 路透
 ------
 
+4-19 [荷兰电信公司KPN称没有迹象表明华为曾不当监控其用户](/articles/reuters/1039129.md)
+
+4-19 [2021年全球政府借贷将跳增约4万亿美元--骏利亨德森投资](/articles/reuters/1039130.md)
+
 4-19 [美团将通过股票配售和可转债筹资至多100亿美元--销售文件](/articles/reuters/1039131.md)
 
 4-19 [独家：英国凯度正协商收购美国市调机构Numerator--消息人士](/articles/reuters/1039132.md)
@@ -596,8 +600,4 @@
 4-13 [综述：中国宏观杠杆率料保持基本平稳 央行将呵护流动性护航地方债发行](/articles/reuters/1039427.md)
 
 4-13 [美国财长叶伦不会在汇率报告中把中国列为汇率操纵国--彭博记者推特](/articles/reuters/1039428.md)
-
-4-13 [日本政府决定将福岛核污水排入大海](/articles/reuters/1039429.md)
-
-4-13 [欧盟称不会帮助黑山偿还中国贷款 但可资助后续建设](/articles/reuters/1039430.md)
 
