--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,18 @@
 法广
 ------
 
+4-19 [纳瓦尼传命危  美国警告俄国恐面临后果 – 法国国际广播电台 - RFI](/articles/rfi/1031531.md)
+
+4-19 [荷银承认防制洗钱不力 将付4.8亿欧元和解 – 法国国际广播电台 - RFI](/articles/rfi/1031532.md)
+
+4-19 [纳瓦尼传命危  德国关切吁予医疗照护 – 法国国际广播电台 - RFI](/articles/rfi/1031533.md)
+
+4-19 [新西兰外长称对扩大五眼联盟职权范围感到不适  以水兽和龙形容对华关系](/articles/rfi/1031534.md)
+
+4-19 [捷克谴责俄罗斯报复过度誓言反击 欧盟讨论支持](/articles/rfi/1031535.md)
+
+4-19 [俄罗斯陈兵乌东边界  教宗方济各关切 – 法国国际广播电台 - RFI](/articles/rfi/1031536.md)
+
 4-19 [与马克龙和默克尔谈气候之后 习近平或不急于告知是否参加拜登的气候峰会](/articles/rfi/1031537.md)
 
 4-19 [政坛世代交替 古巴共产党选举新领袖 – 法国国际广播电台 - RFI](/articles/rfi/1031538.md)
@@ -588,16 +600,4 @@
 4-14 [艺术对撞政治  中国对奥斯卡从仰望变唾弃 – 法国国际广播电台 - RFI](/articles/rfi/1031829.md)
 
 4-14 [伊朗放话加速浓缩铀 美国：会继续谈判 – 法国国际广播电台 - RFI](/articles/rfi/1031830.md)
-
-4-14 [拜登将伴妻子赴门诊 白宫未透露更多细节 – 法国国际广播电台 - RFI](/articles/rfi/1031831.md)
-
-4-14 [美国气候特使克里今抵上海 为拜登的虚拟气候峰会铺路](/articles/rfi/1031832.md)
-
-4-14 [美前参议员托德率团抵台台湾将说明中国最近挑衅活动](/articles/rfi/1031833.md)
-
-4-14 [港府拟加紧传媒阅查且只准显示选民姓名的第一个字](/articles/rfi/1031834.md)
-
-4-14 [强迫劳动：人权组织指控跨国集团的法理依据](/articles/rfi/1031835.md)
-
-4-14 [又一资深民主派退出香港政坛](/articles/rfi/1031836.md)
 
