--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-19 [Philosophia 哲学社｜维为伪学考：被歪曲的史学背后，隐藏着什么？](/articles/cdt/383527.md)
+
 4-19 [鉴闻｜货车司机生存困境：吃住在车上数月不回家，运费被扣轮胎被偷](/articles/cdt/383531.md)
 
 4-19 [导筒directube｜豆瓣查无此奖，查无此片](/articles/cdt/383534.md)
@@ -598,6 +600,4 @@
 3-18 [【网络民议】江苏女辅警“敲诈”案后续，法院拒绝家属委托律师](/articles/cdt/384872.md)
 
 3-18 [女孩别怕 | 上不去的热搜，不可说的北京水利水电学校，我偏要来说一说](/articles/cdt/384876.md)
-
-3-18 [德国之声 | 欧盟同意就新疆人权问题制裁中国官员](/articles/cdt/384877.md)
 
