--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+4-19 [是谁“敢”屏蔽温家宝的文章？](/articles/dw/1042903.md)
+
+4-19 [纳瓦尔尼被送往医院 医生称其生命垂危](/articles/dw/1042904.md)
+
 4-19 [2034年或是更近 ？美海军高官出书警防中美开战](/articles/dw/1042905.md)
 
 4-19 [媒体：蚂蚁正寻找让马云出售持股的方式](/articles/dw/1042906.md)
@@ -596,8 +600,4 @@
 4-2 [安理会谴责缅甸军方暴力镇压 中俄软化部分言词](/articles/dw/1043201.md)
 
 4-2 [中国以2022北京冬奥测试项目反制抵制声浪](/articles/dw/1043202.md)
-
-4-1 [人权与贸易区别对待？企业界呼吁美中合作共存](/articles/dw/1043203.md)
-
-4-1 [BBC记者辞京赴台事件持续发酵](/articles/dw/1043204.md)
 
