--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-19 [国安教育延伸至香港 分析：强迫全民参与的文革升级版](/articles/voa/1041414.md)
+
+4-19 [用“战狼外交”讲中国故事 分析人士：这招不灵](/articles/voa/1041415.md)
+
 4-19 [中共党报发文警告港大学生会会长：等待你的只有监牢和手铐](/articles/voa/1041416.md)
 
 4-19 [印度新冠病例单日新病例超过26万 美国半数成年人接种了至少一剂疫苗](/articles/voa/1041417.md)
@@ -596,8 +600,4 @@
 4-6 [美国也搞疫苗外交？国务卿任命疫苗全球外交协调员“为了挽救生命”](/articles/voa/1041712.md)
 
 4-6 [称要保护运动员健康 朝鲜宣布不参加东京奥运会](/articles/voa/1041713.md)
-
-4-6 [中国海军：航母编队在台湾周边训练将会常态化](/articles/voa/1041714.md)
-
-4-6 [科技公司扫除虚假信息面临两难](/articles/voa/1041715.md)
 
