--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,16 @@
 德国之声
 ------
 
+4-19 [加强存在和行动 欧盟定印太为战略重点](/articles/dw/1042896.md)
+
+4-19 [港媒：港府斥资千万美金游说美国政界](/articles/dw/1042897.md)
+
+4-19 [德国前蹦床专业选手是否会成为新一任联邦总理](/articles/dw/1042898.md)
+
+4-19 [她会不会成为德国第一任“绿党总理”？](/articles/dw/1042899.md)
+
+4-19 [德语媒体：联手应对气候危机 中美真正动机何在？](/articles/dw/1042900.md)
+
 4-19 [拉开与五眼联盟距离？新西兰外长谈对华政策](/articles/dw/1042901.md)
 
 4-19 [人权观察：新疆正在发生反人类罪行](/articles/dw/1042902.md)
@@ -590,14 +600,4 @@
 4-2 [这个北极圈的小镇为何要申办夏季奥运？](/articles/dw/1043194.md)
 
 4-2 [台湾火车出轨意外 已造成至少48人死亡](/articles/dw/1043195.md)
-
-4-2 [战火下的孩子们](/articles/dw/1043196.md)
-
-4-2 [欧中投资协议： 外国NGO“意外中枪”](/articles/dw/1043197.md)
-
-4-2 [台湾火车出轨意外 已造成至少41人死亡](/articles/dw/1043198.md)
-
-4-2 [德国的复活节风俗](/articles/dw/1043199.md)
-
-4-2 [台湾火车出轨意外 4死36人无生命迹象](/articles/dw/1043200.md)
 
