--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-19 [韩国将本国国民与朝鲜的网上信息分享纳入监管](/articles/voa/1041412.md)
+
 4-19 [欧盟制定印太合作战略计划 加强区域繁荣并非针对中国？](/articles/voa/1041413.md)
 
 4-19 [国安教育延伸至香港 分析：强迫全民参与的文革升级版](/articles/voa/1041414.md)
@@ -598,6 +600,4 @@
 4-6 [香港再增输入个案 专家建议禁菲律宾等国航班](/articles/voa/1041710.md)
 
 4-6 [中共对台灰色地带威胁升高 台湾人为何还能保持乐观？](/articles/voa/1041711.md)
-
-4-6 [美国也搞疫苗外交？国务卿任命疫苗全球外交协调员“为了挽救生命”](/articles/voa/1041712.md)
 
