--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-19 [北京市检察院政治部主任马立娜因 “抑郁症”坠楼身亡](/articles/rfa/1045830.md)
+
 4-19 [美日峰会强调台海重要性 台学者：将间接促成“四方会谈+台湾”](/articles/rfa/1045831.md)
 
 4-19 [辽宁舰与罗斯福号最近距离400公里 台学者：共军未采反制措施](/articles/rfa/1045832.md)
@@ -598,6 +600,4 @@
 3-18 [台湾陆委会主委首提“建设性模糊”](/articles/rfa/1046128.md)
 
 3-18 [各地楼市调控政策不断加码   防止资金制造房市泡沫](/articles/rfa/1046129.md)
-
-3-18 [网信息办启动语音识别监控    约谈 腾讯、字节跳动等企业](/articles/rfa/1046130.md)
 
