--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-20 [台湾希望从美国购买先进的AGM-158导弹加强远程打击能力](/articles/voa/1041409.md)
+
+4-20 [纳瓦尔尼命悬一线 俄罗斯当局被指想置反对派于死地](/articles/voa/1041410.md)
+
 4-19 [新西兰称五眼联盟职权范围扩大令其不适](/articles/voa/1041411.md)
 
 4-19 [韩国将本国国民与朝鲜的网上信息分享纳入监管](/articles/voa/1041412.md)
@@ -596,8 +600,4 @@
 4-6 [罗斯福号航母战斗群重返南中国海 致力维护航行自由](/articles/voa/1041707.md)
 
 4-6 [缅甸示威者喷涂红漆抗议军方镇压 “鲜血”染红城市街头](/articles/voa/1041708.md)
-
-4-6 [菲律宾就中国渔船滞留立场放缓 中国外交部要菲“停止无端炒作”](/articles/voa/1041709.md)
-
-4-6 [香港再增输入个案 专家建议禁菲律宾等国航班](/articles/voa/1041710.md)
 
