--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-20 [格桑坚参：从中共统战干部到争取西藏自由的推手](/articles/rfa/1045829.md)
+
 4-19 [北京市检察院政治部主任马立娜因 “抑郁症”坠楼身亡](/articles/rfa/1045830.md)
 
 4-19 [美日峰会强调台海重要性 台学者：将间接促成“四方会谈+台湾”](/articles/rfa/1045831.md)
@@ -598,6 +600,4 @@
 3-18 [台湾不再将凤梨销往大陆？官员：假新闻制造社会动乱](/articles/rfa/1046127.md)
 
 3-18 [台湾陆委会主委首提“建设性模糊”](/articles/rfa/1046128.md)
-
-3-18 [各地楼市调控政策不断加码   防止资金制造房市泡沫](/articles/rfa/1046129.md)
 
