--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+4-20 [反送中纪录片入围奥斯卡   “北京禁令帮了我们”](/articles/rfa/1045827.md)
+
+4-20 [北京小汤山强拆后续：业主数十次起诉镇政府  法院不予立案](/articles/rfa/1045828.md)
+
 4-20 [格桑坚参：从中共统战干部到争取西藏自由的推手](/articles/rfa/1045829.md)
 
 4-19 [北京市检察院政治部主任马立娜因 “抑郁症”坠楼身亡](/articles/rfa/1045830.md)
@@ -596,8 +600,4 @@
 3-19 [一边会晤  美国一边对在美中企下手](/articles/rfa/1046125.md)
 
 3-18 [北京退休教师陈兆志因言获罪    检方建议量刑两年半](/articles/rfa/1046126.md)
-
-3-18 [台湾不再将凤梨销往大陆？官员：假新闻制造社会动乱](/articles/rfa/1046127.md)
-
-3-18 [台湾陆委会主委首提“建设性模糊”](/articles/rfa/1046128.md)
 
