--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-20 [人权观察呼吁联合国对中国被控反人类罪展开调查](/articles/voa/1041407.md)
+
+4-20 [中国央行称将扩大数字人民币试点](/articles/voa/1041408.md)
+
 4-20 [台湾希望从美国购买先进的AGM-158导弹加强远程打击能力](/articles/voa/1041409.md)
 
 4-20 [纳瓦尔尼命悬一线 俄罗斯当局被指想置反对派于死地](/articles/voa/1041410.md)
@@ -596,8 +600,4 @@
 4-7 [法美日澳印举行联合军演 对抗中国日益扩张的军事活动](/articles/voa/1041705.md)
 
 4-7 [日本外相呼吁中国停止压制香港 中方回应：别跟美国联手抗中](/articles/voa/1041706.md)
-
-4-6 [罗斯福号航母战斗群重返南中国海 致力维护航行自由](/articles/voa/1041707.md)
-
-4-6 [缅甸示威者喷涂红漆抗议军方镇压 “鲜血”染红城市街头](/articles/voa/1041708.md)
 
