--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-20 [香港民主人士遭判刑 英国欧盟质疑中国信守国际承诺](/articles/rfa/1045826.md)
+
 4-20 [反送中纪录片入围奥斯卡   “北京禁令帮了我们”](/articles/rfa/1045827.md)
 
 4-20 [北京小汤山强拆后续：业主数十次起诉镇政府  法院不予立案](/articles/rfa/1045828.md)
@@ -598,6 +600,4 @@
 3-19 [中国本周开审两名加拿大人    意在对美施压？](/articles/rfa/1046124.md)
 
 3-19 [一边会晤  美国一边对在美中企下手](/articles/rfa/1046125.md)
-
-3-18 [北京退休教师陈兆志因言获罪    检方建议量刑两年半](/articles/rfa/1046126.md)
 
