--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+4-20 [法第戎酒业打赢地名官司，黑醋栗香甜酒没有中国制造版](/articles/rfi/1031501.md)
+
 4-20 [市场关注足坛动向 欧股多半收低 – 法国国际广播电台 - RFI](/articles/rfi/1031502.md)
 
 4-20 [俄罗斯向乌克兰边境大规模陈兵 俄欧外交对峙快速升级 - 要闻解说](/articles/rfi/1031503.md)
@@ -598,6 +600,4 @@
 4-15 [港童装Chickeeduck鸡鸭图案被指“黑暴产品”遭没收](/articles/rfi/1031799.md)
 
 4-15 [美最大加密货币交易平台Coinbase挂牌上市 - 今日经济](/articles/rfi/1031800.md)
-
-4-15 [大外宣遇挑战：强迫电视认罪受害者吁全球电视供应商采取行动](/articles/rfi/1031801.md)
 
