--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+4-20 [中国强推统一教材 英国国际学校拟撤出](/articles/rfi/1031499.md)
+
+4-20 [另组超级联赛12队 恐被逐出UEFA赛事 – 法国国际广播电台 - RFI](/articles/rfi/1031500.md)
+
 4-20 [法第戎酒业打赢地名官司，黑醋栗香甜酒没有中国制造版](/articles/rfi/1031501.md)
 
 4-20 [市场关注足坛动向 欧股多半收低 – 法国国际广播电台 - RFI](/articles/rfi/1031502.md)
@@ -596,8 +600,4 @@
 4-15 [斯里兰卡以环保为重 不屑棕榈油产业](/articles/rfi/1031797.md)
 
 4-15 [巴黎圣母院大火两周年 一窥修复工程进度 - 文化遗产](/articles/rfi/1031798.md)
-
-4-15 [港童装Chickeeduck鸡鸭图案被指“黑暴产品”遭没收](/articles/rfi/1031799.md)
-
-4-15 [美最大加密货币交易平台Coinbase挂牌上市 - 今日经济](/articles/rfi/1031800.md)
 
