--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-20 [西点军校宣布大规模作弊案处理结果 六十余名学员被开除或留级](/articles/voa/1041405.md)
+
 4-20 [所有美国成年人即日起都有资格接种新冠疫苗](/articles/voa/1041406.md)
 
 4-20 [人权观察呼吁联合国对中国被控反人类罪展开调查](/articles/voa/1041407.md)
@@ -598,6 +600,4 @@
 4-7 [时事大家谈: 孙大午被捕逾四个月，谁还敢为他发声？](/articles/voa/1041703.md)
 
 4-7 [IMF看好世界经济前景，大幅上调美中经济增速](/articles/voa/1041704.md)
-
-4-7 [法美日澳印举行联合军演 对抗中国日益扩张的军事活动](/articles/voa/1041705.md)
 
