--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-20 [【404文库】肖美丽自述：反二手烟被网暴炸号，攻击我的人是谁？](/articles/cdt/383511.md)
+
 4-19 [【网络民议】我们过不了富人生活连看下都不行吗？](/articles/cdt/383522.md)
 
 4-19 [Philosophia 哲学社｜维为伪学考：被歪曲的史学背后，隐藏着什么？](/articles/cdt/383527.md)
@@ -598,6 +600,4 @@
 3-18 [Newtalk｜月赚7千美元？爱党网红郑国成醉后吐真言小粉红傻眼](/articles/cdt/384849.md)
 
 3-18 [我地有笔 | 香港民主派47人小传（节选）](/articles/cdt/384861.md)
-
-3-18 [【网络民议】江苏女辅警“敲诈”案后续，法院拒绝家属委托律师](/articles/cdt/384872.md)
 
