--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-20 [【404文库】3号厅检票员工 | 浅谈国产激情戏的衰变](/articles/cdt/383507.md)
+
 4-20 [吕频：解决女权主义?从“性别对立”到“爱国”作为一种性别暴力，及一个“境外势力”的自白书](/articles/cdt/383508.md)
 
 4-20 [【404文库】肖美丽自述：反二手烟被网暴炸号，攻击我的人是谁？](/articles/cdt/383511.md)
@@ -598,6 +600,4 @@
 3-18 [【网络民议】说错话的机会只有一次？郑国成失去了他的墙内平台](/articles/cdt/384843.md)
 
 3-18 [【CDT导览】《无依之地》的死与生：被审查巨蟒盘踞着的每一寸土地，都是无依之地](/articles/cdt/384845.md)
-
-3-18 [Newtalk｜月赚7千美元？爱党网红郑国成醉后吐真言小粉红傻眼](/articles/cdt/384849.md)
 
