--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-20 [加强空对地攻击能力 台湾争取购买美飞弹](/articles/dw/1042895.md)
+
 4-19 [加强存在和行动 欧盟定印太为战略重点](/articles/dw/1042896.md)
 
 4-19 [港媒：港府斥资千万美金游说美国政界](/articles/dw/1042897.md)
@@ -598,6 +600,4 @@
 4-2 [德国如何从美国大规模基建中获益？](/articles/dw/1043193.md)
 
 4-2 [这个北极圈的小镇为何要申办夏季奥运？](/articles/dw/1043194.md)
-
-4-2 [台湾火车出轨意外 已造成至少48人死亡](/articles/dw/1043195.md)
 
