--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+4-20 [COVID-19痊愈者能否免疫 英国做实验进行了解 – 法国国际广播电台 - RFI](/articles/rfi/1031486.md)
+
 4-20 [温家宝文章提及文革而犯忌？ - 要闻分析](/articles/rfi/1031487.md)
 
 4-20 [法国军队5月参加在日本举行的日台法三国军演](/articles/rfi/1031488.md)
@@ -598,6 +600,4 @@
 4-15 [MLB太空人疑有球员染疫 5主力球员遭列伤兵 – 法国国际广播电台 - RFI](/articles/rfi/1031784.md)
 
 4-15 [土耳其媒体：美取消对黑海部署两军舰 – 法国国际广播电台 - RFI](/articles/rfi/1031785.md)
-
-4-15 [拜登甘尼通话  美撤军阿富汗后建立稳固双边关系 – 法国国际广播电台 - RFI](/articles/rfi/1031786.md)
 
