--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-20 [末代棱皮海龟的生路在人类手里](/articles/voa/1041394.md)
+
 4-20 [布林肯在地球日峰会前重申气候问题是美外交政策优先](/articles/voa/1041395.md)
 
 4-20 [庄稼价格飞涨 美国农民忧喜参半](/articles/voa/1041396.md)
@@ -598,6 +600,4 @@
 4-7 [厨师联手用厨艺反击对亚太裔的仇恨攻击](/articles/voa/1041692.md)
 
 4-7 [布吉的篮球梦抒发亚裔美国人的不平之鸣](/articles/voa/1041693.md)
-
-4-7 [拜登加快新冠疫苗开放接种的时间安排](/articles/voa/1041694.md)
 
