--- a/articles/cdt/383495.md
+++ b/articles/cdt/383495.md
@@ -2,4 +2,4 @@
 [【CDT推荐】本周推荐媒体](https://chinadigitaltimes.net/chinese/665080.html)
 ------
 
-<h3><strong>传媒研究：<a href="https://newslab.info/">新闻实验室</a></strong></h3><p>推荐理由：专业眼光解读大众传媒——今天，这两个概念本身也在实验之中。</p><p><noscript><img src="https://chinadigitaltimes.net/chinese/files/2021/04/HK-international-film-festival_cover.png" alt="cdtimg"></noscript><img class="lazyload" src="data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20viewBox=%220%200%20210%20140%22%3E%3C/svg%3E" data-src="https://chinadigitaltimes.net/chinese/files/2021/04/HK-international-film-festival_cover.png" alt="cdtimg"></p><div class="ts">《歪脑》插图</div><p></p><h3><strong>网络媒体：<a href="https://www.wainao.me/&quot;">歪脑</a></strong></h3><p>推荐理由：为讲中文的年轻一代度身定制的新闻杂志， Why not?</p><div style="text-align:center;font-size:20px;font-weight:bold"><a href="https://chinadigitaltimes.net/chinese/media-recommendations">往期 CDT推荐媒体 </a></div><div class="addtoany_share_save_container addtoany_content addtoany_content_bottom"><div class="a2a_kit a2a_kit_size_32 addtoany_list" data-a2a-url="https://chinadigitaltimes.net/chinese/665080.html" data-a2a-title="【CDT推荐】本周推荐媒体"><a class="a2a_button_facebook" href="https://www.addtoany.com/add_to/facebook?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F665080.html&amp;linkname=%E3%80%90CDT%E6%8E%A8%E8%8D%90%E3%80%91%E6%9C%AC%E5%91%A8%E6%8E%A8%E8%8D%90%E5%AA%92%E4%BD%93" title="Facebook" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_twitter" href="https://www.addtoany.com/add_to/twitter?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F665080.html&amp;linkname=%E3%80%90CDT%E6%8E%A8%E8%8D%90%E3%80%91%E6%9C%AC%E5%91%A8%E6%8E%A8%E8%8D%90%E5%AA%92%E4%BD%93" title="Twitter" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_whatsapp" href="https://www.addtoany.com/add_to/whatsapp?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F665080.html&amp;linkname=%E3%80%90CDT%E6%8E%A8%E8%8D%90%E3%80%91%E6%9C%AC%E5%91%A8%E6%8E%A8%E8%8D%90%E5%AA%92%E4%BD%93" title="WhatsApp" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_telegram" href="https://www.addtoany.com/add_to/telegram?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F665080.html&amp;linkname=%E3%80%90CDT%E6%8E%A8%E8%8D%90%E3%80%91%E6%9C%AC%E5%91%A8%E6%8E%A8%E8%8D%90%E5%AA%92%E4%BD%93" title="Telegram" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_email" href="https://www.addtoany.com/add_to/email?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F665080.html&amp;linkname=%E3%80%90CDT%E6%8E%A8%E8%8D%90%E3%80%91%E6%9C%AC%E5%91%A8%E6%8E%A8%E8%8D%90%E5%AA%92%E4%BD%93" title="Email" rel="nofollow noopener" target="_blank"></a><a class="a2a_dd addtoany_share_save addtoany_share" href="https://www.addtoany.com/share"></a></div></div>
+<h3><strong>传媒研究：<a href="https://newslab.info/">新闻实验室</a></strong></h3><p>推荐理由：专业眼光解读大众传媒——今天，这两个概念本身也在实验之中。</p><p><noscript><img src="https://chinadigitaltimes.net/chinese/files/2021/04/HK-international-film-festival_cover.png" alt="cdtimg"></noscript><img class="lazyload" src="data:image/svg+xml,%3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20viewBox=%220%200%20210%20140%22%3E%3C/svg%3E" data-src="https://chinadigitaltimes.net/chinese/files/2021/04/HK-international-film-festival_cover.png" alt="cdtimg"></p><div class="ts">《歪脑》插图</div><p></p><h3><strong>网络媒体：<a href="https://www.wainao.me/">歪脑</a></strong></h3><p>推荐理由：为讲中文的年轻一代度身定制的新闻杂志， Why not?</p><div style="text-align:center;font-size:20px;font-weight:bold"><a href="https://chinadigitaltimes.net/chinese/media-recommendations">往期 CDT推荐媒体 </a></div><div class="addtoany_share_save_container addtoany_content addtoany_content_bottom"><div class="a2a_kit a2a_kit_size_32 addtoany_list" data-a2a-url="https://chinadigitaltimes.net/chinese/665080.html" data-a2a-title="【CDT推荐】本周推荐媒体"><a class="a2a_button_facebook" href="https://www.addtoany.com/add_to/facebook?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F665080.html&amp;linkname=%E3%80%90CDT%E6%8E%A8%E8%8D%90%E3%80%91%E6%9C%AC%E5%91%A8%E6%8E%A8%E8%8D%90%E5%AA%92%E4%BD%93" title="Facebook" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_twitter" href="https://www.addtoany.com/add_to/twitter?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F665080.html&amp;linkname=%E3%80%90CDT%E6%8E%A8%E8%8D%90%E3%80%91%E6%9C%AC%E5%91%A8%E6%8E%A8%E8%8D%90%E5%AA%92%E4%BD%93" title="Twitter" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_whatsapp" href="https://www.addtoany.com/add_to/whatsapp?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F665080.html&amp;linkname=%E3%80%90CDT%E6%8E%A8%E8%8D%90%E3%80%91%E6%9C%AC%E5%91%A8%E6%8E%A8%E8%8D%90%E5%AA%92%E4%BD%93" title="WhatsApp" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_telegram" href="https://www.addtoany.com/add_to/telegram?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F665080.html&amp;linkname=%E3%80%90CDT%E6%8E%A8%E8%8D%90%E3%80%91%E6%9C%AC%E5%91%A8%E6%8E%A8%E8%8D%90%E5%AA%92%E4%BD%93" title="Telegram" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_email" href="https://www.addtoany.com/add_to/email?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F665080.html&amp;linkname=%E3%80%90CDT%E6%8E%A8%E8%8D%90%E3%80%91%E6%9C%AC%E5%91%A8%E6%8E%A8%E8%8D%90%E5%AA%92%E4%BD%93" title="Email" rel="nofollow noopener" target="_blank"></a><a class="a2a_dd addtoany_share_save addtoany_share" href="https://www.addtoany.com/share"></a></div></div>
