--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-20 [2021全球新闻自由指数 中国倒数第四](/articles/dw/1042893.md)
+
 4-20 [菲律宾将派军舰进驻南海  宣示其资源主权](/articles/dw/1042894.md)
 
 4-20 [加强空对地攻击能力 台湾争取购买美飞弹](/articles/dw/1042895.md)
@@ -598,6 +600,4 @@
 4-2 [疫情之下：约会软件大受欢迎](/articles/dw/1043191.md)
 
 4-2 [台湾火车出轨意外 已造成至少54人死亡](/articles/dw/1043192.md)
-
-4-2 [德国如何从美国大规模基建中获益？](/articles/dw/1043193.md)
 
