--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-20 [高倍镜｜海南一厅官因研究秦桧被处理，从厅级降为了处级](/articles/cdt/383469.md)
+
 4-20 [【CDT推荐】本周推荐媒体](/articles/cdt/383495.md)
 
 4-20 [【404文库】抛开书本 | 豆瓣删除所有关于第93届奥斯卡奖信息](/articles/cdt/383503.md)
@@ -598,6 +600,4 @@
 3-19 [【网络民议】B站作者批评越南 评论区网友“阴阳怪气”](/articles/cdt/384822.md)
 
 3-21 [【中国哭墙】亲爱的，抱抱你（3月16-21日，2021年）](/articles/cdt/384823.md)
-
-3-18 [【异闻观止】 “离婚冷静期”实施三个月 武汉近6成夫妻“冷静”后放弃离婚](/articles/cdt/384826.md)
 
