--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-20 [新时代来临 卡内尔成为几十年来首位不姓卡斯特罗的古巴最高领导人](/articles/voa/1041390.md)
+
 4-20 [美军撤离阿富汗后是否担心中国派兵？五角大楼：阿富汗主权应得到尊重](/articles/voa/1041391.md)
 
 4-20 [美众院通过决议谴责北京侵蚀香港法治 佩洛西：聚焦追究中国责任](/articles/voa/1041392.md)
@@ -598,6 +600,4 @@
 4-7 [大赦国际：中国等国家以疫情为由扩大攻击人权](/articles/voa/1041688.md)
 
 4-7 [中国判处维族前新疆高级官员死刑 罪名是分裂国家](/articles/voa/1041689.md)
-
-4-7 [台外长：若遭中国攻击 台湾会战斗到底](/articles/voa/1041690.md)
 
