--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-20 [习近平再强推“一带一路”   学者指中、西方冷战已开打](/articles/rfa/1045822.md)
+
 4-20 [温家宝撰文呼吁正义  他是在作秀吗？](/articles/rfa/1045823.md)
 
 4-20 [新疆涉反人类罪行 人权组织吁UN介入调查](/articles/rfa/1045824.md)
@@ -598,6 +600,4 @@
 3-19 [中共号召全民学党史为哪般？](/articles/rfa/1046120.md)
 
 3-19 [央视曝光商家收集人脸信息 到底谁在“偷脸”？](/articles/rfa/1046121.md)
-
-3-19 [欧盟“疫苗护照”不认可中国疫苗   成员国自行决定是否接纳](/articles/rfa/1046122.md)
 
