--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-20 [美国海军首次将无人驾驶装备纳入太平洋多域作战综合演习](/articles/voa/1041388.md)
+
 4-20 [台学者：美日峰会提及台湾的声明有实质内容并非空谈](/articles/voa/1041389.md)
 
 4-20 [新时代来临 卡内尔成为几十年来首位不姓卡斯特罗的古巴最高领导人](/articles/voa/1041390.md)
@@ -598,6 +600,4 @@
 4-7 [黎智英等人案子开审，李卓人：历史将宣判我们无罪](/articles/voa/1041686.md)
 
 4-7 [持续受到中国打压 外媒记者呼吁抵制不对称媒体战](/articles/voa/1041687.md)
-
-4-7 [大赦国际：中国等国家以疫情为由扩大攻击人权](/articles/voa/1041688.md)
 
