--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,18 @@
 法广
 ------
 
+4-20 [RSF：全球新闻自由最新排名中国倒数第四 北京监控如新冠病毒 香港首当其冲 - 要闻解说](/articles/rfi/1031450.md)
+
+4-20 [中国驻美大使馆开始接受拟赴华人员非中国疫苗的接种记录](/articles/rfi/1031451.md)
+
+4-20 [中美激烈竞争之际 存在技术领先出路](/articles/rfi/1031452.md)
+
+4-20 [王岐山博鳌开幕式自称为习近平“报幕” 有指战战兢兢？](/articles/rfi/1031453.md)
+
+4-20 [法国对来自巴西等4国的落地旅客周六起实施检疫隔离](/articles/rfi/1031454.md)
+
+4-20 [非政府组织吁各国 捐1546亿预防饥荒 – 法国国际广播电台 - RFI](/articles/rfi/1031455.md)
+
 4-20 [芯片短缺如芒刺在背 欧盟鼓励台湾厂商扩大投资  但旱情令台湾的压力陡增](/articles/rfi/1031456.md)
 
 4-20 [今为&quot;谷雨&quot; 联合国推定中文日](/articles/rfi/1031457.md)
@@ -588,16 +600,4 @@
 4-16 [超限战：中国青年网军两千万 平均19岁](/articles/rfi/1031748.md)
 
 4-15 [“气候外交”：习近平将出席中法德气候视频峰会](/articles/rfi/1031749.md)
-
-4-15 [美国务卿布林肯秘访阿富汗 讨论撤军 – 法国国际广播电台 - RFI](/articles/rfi/1031750.md)
-
-4-15 [零售和就业数据佳 美股开盘涨升 – 法国国际广播电台 - RFI](/articles/rfi/1031751.md)
-
-4-15 [澳洲9月阿富汗撤军 总理哽咽宣读41阵亡军人姓名 – 法国国际广播电台 - RFI](/articles/rfi/1031752.md)
-
-4-15 [重庆李怀庆案：对民营企业家的 “打黑”“黑打”式掠夺 - 要闻解说](/articles/rfi/1031753.md)
-
-4-15 [蔡英文会见美国特使代表团：确保印太稳定繁荣](/articles/rfi/1031754.md)
-
-4-15 [研究显示抗药性疟疾在非洲更常见 专家忧心忡忡 – 法国国际广播电台 - RFI](/articles/rfi/1031755.md)
 
