--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,16 @@
 法广
 ------
 
+4-20 [查德军方：总统德比与叛军作战时丧命 – 法国国际广播电台 - RFI](/articles/rfi/1031445.md)
+
+4-20 [基民党党魁拉谢特出线 成德保守派总理候选人 – 法国国际广播电台 - RFI](/articles/rfi/1031446.md)
+
+4-20 [亚股跌多涨少 – 法国国际广播电台 - RFI](/articles/rfi/1031447.md)
+
+4-20 [全球政府债务创历史新高 - 今日经济](/articles/rfi/1031448.md)
+
+4-20 [德国《经济周刊》：中国面临巨大挑战 - 柏林飞鸿](/articles/rfi/1031449.md)
+
 4-20 [RSF：全球新闻自由最新排名中国倒数第四 北京监控如新冠病毒 香港首当其冲 - 要闻解说](/articles/rfi/1031450.md)
 
 4-20 [中国驻美大使馆开始接受拟赴华人员非中国疫苗的接种记录](/articles/rfi/1031451.md)
@@ -590,14 +600,4 @@
 4-16 [美国务卿布林肯周四抵达喀布尔 落实美军从阿富汗撤离的计划](/articles/rfi/1031743.md)
 
 4-16 [报复俄介入大选和网攻 美祭经济制裁驱逐10外交官 – 法国国际广播电台 - RFI](/articles/rfi/1031744.md)
-
-4-16 [基辅当局谴责俄罗斯   公然威胁摧毁乌克兰 – 法国国际广播电台 - RFI](/articles/rfi/1031745.md)
-
-4-16 [谁能代表中国？台陆委会：中华民国成立已110年](/articles/rfi/1031746.md)
-
-4-16 [乌克兰东部违反停火事件激增创纪录](/articles/rfi/1031747.md)
-
-4-16 [超限战：中国青年网军两千万 平均19岁](/articles/rfi/1031748.md)
-
-4-15 [“气候外交”：习近平将出席中法德气候视频峰会](/articles/rfi/1031749.md)
 
