--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-20 [“五眼联盟”成员新西兰靠拢北京   澳学者批 “背信弃义”](/articles/rfa/1045819.md)
+
 4-20 [网络炫富视频恐激起民怨   官媒倡禁网上高档消费讯息](/articles/rfa/1045820.md)
 
 4-20 [鸿海美国设厂补贴大缩水 未来可能改投资电动车](/articles/rfa/1045821.md)
@@ -598,6 +600,4 @@
 3-19 [美中终于坐下来会谈     双方将带着什么离开?](/articles/rfa/1046117.md)
 
 3-19 [中国护照有什么用？缅甸中企员工有家难回](/articles/rfa/1046118.md)
-
-3-19 [美塔夫茨大学关闭孔子学院 但交流持续](/articles/rfa/1046119.md)
 
