--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-20 [欧盟印太战略并非联美抗中  文件未提台湾](/articles/rfa/1045818.md)
+
 4-20 [“五眼联盟”成员新西兰靠拢北京   澳学者批 “背信弃义”](/articles/rfa/1045819.md)
 
 4-20 [网络炫富视频恐激起民怨   官媒倡禁网上高档消费讯息](/articles/rfa/1045820.md)
@@ -598,6 +600,4 @@
 3-19 [茉莉花革命在中国：一场没发生的革命](/articles/rfa/1046116.md)
 
 3-19 [美中终于坐下来会谈     双方将带着什么离开?](/articles/rfa/1046117.md)
-
-3-19 [中国护照有什么用？缅甸中企员工有家难回](/articles/rfa/1046118.md)
 
