--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+4-21 [日本开发新冠病毒检测新方法 全球最快](/articles/rfi/1031434.md)
+
 4-20 [国际空间站将迎来法国指挥官](/articles/rfi/1031435.md)
 
 4-20 [拜登对台军售传第一笔自走炮 台湾希望购得远程空射巡航导弹](/articles/rfi/1031436.md)
@@ -598,6 +600,4 @@
 4-16 [法国染疫病逝人数突破10万 死亡总数全球第8 – 法国国际广播电台 - RFI](/articles/rfi/1031732.md)
 
 4-16 [NBA篮网球星阿德雷奇宣布退休 原因心律不整 – 法国国际广播电台 - RFI](/articles/rfi/1031733.md)
-
-4-16 [法国新冠死亡突破10万大关 马克龙：&quot;不会忘记每张面孔 每个名字&quot;](/articles/rfi/1031734.md)
 
