--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-20 [首飞成功! 在火星](/articles/dw/1042878.md)
+
 4-20 [印度新冠变种B.1.617有多危险？](/articles/dw/1042879.md)
 
 4-20 [德语媒体：中美的暂时休战](/articles/dw/1042880.md)
@@ -598,6 +600,4 @@
 4-3 [德国总统发表讲话：让我们共同战疫吧！](/articles/dw/1043176.md)
 
 4-3 [潜舰国造：台湾称欧洲国家也帮忙](/articles/dw/1043177.md)
-
-4-3 [美国会大厦恶性安保事件  两人死亡](/articles/dw/1043178.md)
 
