--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-20 [温家宝祭母文章遭和谐 只因提到4个字](/articles/voa/1041383.md)
+
+4-20 [中国拟接受接种非中国疫苗人员入境， 胡锡进疫苗言论惹是非](/articles/voa/1041384.md)
+
 4-20 [拜登首次对台军售武器据信是帕拉丁型自走炮](/articles/voa/1041385.md)
 
 4-20 [吴宏达去世五周年 追思会缅怀对抗中共劳改的先驱](/articles/voa/1041386.md)
@@ -596,8 +600,4 @@
 4-8 [印度第二波疫情加剧 新冠疫苗吃紧](/articles/voa/1041681.md)
 
 4-7 [台湾表示如果中国入侵 台湾会战斗到底](/articles/voa/1041682.md)
-
-4-7 [降低对中国依赖已成韩国芯片业生存之道](/articles/voa/1041683.md)
-
-4-7 [台湾官员：中国无人机若进入禁区“该击落就击落”](/articles/voa/1041684.md)
 
