--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+4-21 [查德总统德比作战身亡 38岁儿子接棒 – 法国国际广播电台 - RFI](/articles/rfi/1031431.md)
+
+4-21 [拉谢特角逐德国总理 面临多重挑战 – 法国国际广播电台 - RFI](/articles/rfi/1031432.md)
+
+4-21 [研究：格陵兰极端融冰情况恐影响冰原储水能量 – 法国国际广播电台 - RFI](/articles/rfi/1031433.md)
+
 4-21 [日本开发新冠病毒检测新方法 全球最快](/articles/rfi/1031434.md)
 
 4-20 [国际空间站将迎来法国指挥官](/articles/rfi/1031435.md)
@@ -594,10 +600,4 @@
 4-16 [美日首脑白宫首会剑指中国 - 要闻分析](/articles/rfi/1031729.md)
 
 4-16 [维权律师高智晟强制失踪逾千日其妻活要见人死要见尸](/articles/rfi/1031730.md)
-
-4-16 [胡锦涛之子胡海峰视频向习表忠](/articles/rfi/1031731.md)
-
-4-16 [法国染疫病逝人数突破10万 死亡总数全球第8 – 法国国际广播电台 - RFI](/articles/rfi/1031732.md)
-
-4-16 [NBA篮网球星阿德雷奇宣布退休 原因心律不整 – 法国国际广播电台 - RFI](/articles/rfi/1031733.md)
 
