--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-21 [立陶宛不顾中国威胁 拟认定中国在新疆对维吾尔人实施种族灭绝](/articles/voa/1041381.md)
+
+4-21 [中国大外宣碰壁 爱沙尼亚大报承认犯错道歉](/articles/voa/1041382.md)
+
 4-20 [温家宝祭母文章遭和谐 只因提到4个字](/articles/voa/1041383.md)
 
 4-20 [中国拟接受接种非中国疫苗人员入境， 胡锡进疫苗言论惹是非](/articles/voa/1041384.md)
@@ -596,8 +600,4 @@
 4-8 [习近平与默克尔通话 为挽回双方合作再努力一把](/articles/voa/1041679.md)
 
 4-8 [新冠期间亚裔医护人员面临更多挑战](/articles/voa/1041680.md)
-
-4-8 [印度第二波疫情加剧 新冠疫苗吃紧](/articles/voa/1041681.md)
-
-4-7 [台湾表示如果中国入侵 台湾会战斗到底](/articles/voa/1041682.md)
 
