--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+4-21 [爱沙尼亚文化界连署 呼吁对中国影响力扩张採取对策](/articles/rfa/1045815.md)
+
+4-21 [耿和旧金山中领馆外 要求“还我丈夫高智晟骨灰”](/articles/rfa/1045816.md)
+
 4-21 [台湾学者吁学何凤山放宽签证  拯救缅甸人](/articles/rfa/1045817.md)
 
 4-20 [欧盟印太战略并非联美抗中  文件未提台湾](/articles/rfa/1045818.md)
@@ -596,8 +600,4 @@
 3-19 [美中碰面突显价值观鸿沟     逼使拜登延续对华强硬路线](/articles/rfa/1046113.md)
 
 3-19 [中国战狼外交为国内宣传服务   学者:中国准备第二次太平洋战争](/articles/rfa/1046114.md)
-
-3-19 [王宇独子包卓轩在美国申请政庇 曾一度被关](/articles/rfa/1046115.md)
-
-3-19 [茉莉花革命在中国：一场没发生的革命](/articles/rfa/1046116.md)
 
