--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+4-21 [港人清明节期间到沙岭公墓 向反送中运动牺牲无名抗争者致祭](/articles/voa/1041377.md)
+
+4-21 [俄军扩大在乌克兰边境集结，基辅呼吁国际社会制裁俄罗斯](/articles/voa/1041378.md)
+
+4-21 [世界新闻自由指数 中国名列倒数第四](/articles/voa/1041379.md)
+
 4-21 [美两党议员提出法案 支持台湾国际参与](/articles/voa/1041380.md)
 
 4-21 [立陶宛不顾中国威胁 拟认定中国在新疆对维吾尔人实施种族灭绝](/articles/voa/1041381.md)
@@ -594,10 +600,4 @@
 4-8 [一组国际科学家呼吁对新冠病毒的源头展开新的调查](/articles/voa/1041675.md)
 
 4-8 [12港人案李宇轩被控国安法等罪首现身法院 支持者忧被安排官派律师](/articles/voa/1041676.md)
-
-4-8 [时事大家谈: 习近平重设党史禁区，“思想解放”恐成绝响？](/articles/voa/1041677.md)
-
-4-8 [台海局势紧张 美国军舰例行驶过台湾海峡](/articles/voa/1041678.md)
-
-4-8 [习近平与默克尔通话 为挽回双方合作再努力一把](/articles/voa/1041679.md)
 
