--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+4-21 [欧洲药管局发现强生疫苗可能与血栓有联系](/articles/voa/1041373.md)
+
+4-21 [乍得总统死在前线 总统之子领导军人执政](/articles/voa/1041374.md)
+
+4-21 [中国军方涉嫌对日发动网络攻击](/articles/voa/1041375.md)
+
 4-21 [时事大家谈: 北京“剿杀”下 香港未来在何方？](/articles/voa/1041376.md)
 
 4-21 [港人清明节期间到沙岭公墓 向反送中运动牺牲无名抗争者致祭](/articles/voa/1041377.md)
@@ -594,10 +600,4 @@
 4-8 [欧盟与英国药监机构发现阿斯利康新冠疫苗与罕见血栓有关联](/articles/voa/1041671.md)
 
 4-8 [布林肯确认美国之音的独立性，讨论了俄罗斯报道面临的威胁](/articles/voa/1041672.md)
-
-4-8 [未及时报告财务信息 蛋壳公寓将被纽交所摘牌](/articles/voa/1041673.md)
-
-4-8 [加拿大为何迟迟不能决定禁用华为？](/articles/voa/1041674.md)
-
-4-8 [一组国际科学家呼吁对新冠病毒的源头展开新的调查](/articles/voa/1041675.md)
 
