--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -11,6 +11,8 @@
 
 4-20 [王昊轩的韭菜园｜别怪知识分子不发声](/articles/cdt/383464.md)
 
+4-20 [【CDT导览】肖美丽事件如何演变成一场以“爱国”为名的性别暴力](/articles/cdt/383465.md)
+
 4-20 [大象公会｜央行的人口转型论文有多烂](/articles/cdt/383467.md)
 
 4-20 [高倍镜｜海南一厅官因研究秦桧被处理，从厅级降为了处级](/articles/cdt/383469.md)
@@ -598,6 +600,4 @@
 3-20 [【立此存照】网信办、公安部约谈11家企业 为中国版Clubhouse“划红线”](/articles/cdt/384787.md)
 
 3-22 [【CDT敏感词周报】第十六期：制裁王晨、郑国成、许艳敲诈案、Signal被墙、取消奥斯卡直播](/articles/cdt/384795.md)
-
-3-19 [【图说天朝】解放军部队家属院通知要求禁停特斯拉](/articles/cdt/384800.md)
 
