--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-21 [陪审团裁决：被控杀死弗洛伊德的前明尼苏达警察肖文三项罪名均告成立](/articles/voa/1041371.md)
+
 4-21 [一名华裔科研人员因窃取美国医学研究商业秘密被判33月监禁](/articles/voa/1041372.md)
 
 4-21 [欧洲药管局发现强生疫苗可能与血栓有联系](/articles/voa/1041373.md)
@@ -598,6 +600,4 @@
 4-8 [美疾控中心：美国目前最常见新冠病毒是最早在英国发现的变种](/articles/voa/1041669.md)
 
 4-8 [约旦国王首次公开谈及他与前王储的争斗](/articles/voa/1041670.md)
-
-4-8 [欧盟与英国药监机构发现阿斯利康新冠疫苗与罕见血栓有关联](/articles/voa/1041671.md)
 
