--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+4-21 [忧虑疫情加剧 日股开低 – 法国国际广播电台 - RFI](/articles/rfi/1031416.md)
+
+4-21 [涨多后失去动能 美股连两天收低 – 法国国际广播电台 - RFI](/articles/rfi/1031417.md)
+
 4-21 [佛洛伊德压颈致死案 陪审团裁决警官谋杀罪成立 – 法国国际广播电台 - RFI](/articles/rfi/1031418.md)
 
 4-21 [乍得总统代比战死     周五将举行国葬](/articles/rfi/1031419.md)
@@ -596,8 +600,4 @@
 4-16 [四月新鲜蔬菜上市 - 法国美食](/articles/rfi/1031714.md)
 
 4-16 [董建华骆惠宁出席国家安全会黄浩铭乘机抗议](/articles/rfi/1031715.md)
-
-4-16 [大陆男子向19岁中六生用㓥肚理由是香港属于中国](/articles/rfi/1031716.md)
-
-4-16 [国安公署署长郑雁雄称美英不再是香港老板](/articles/rfi/1031717.md)
 
