--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+4-21 [印度第二波新冠肺炎疫情急速恶化](/articles/rfi/1031414.md)
+
+4-21 [法国世界报：在博鳌经济论坛上，习近平推动具有中国特色的全球化 - 法国世界报](/articles/rfi/1031415.md)
+
 4-21 [忧虑疫情加剧 日股开低 – 法国国际广播电台 - RFI](/articles/rfi/1031416.md)
 
 4-21 [涨多后失去动能 美股连两天收低 – 法国国际广播电台 - RFI](/articles/rfi/1031417.md)
@@ -596,8 +600,4 @@
 4-16 [中国经济首季成长创新高  港沪股市收红 – 法国国际广播电台 - RFI](/articles/rfi/1031712.md)
 
 4-16 [美印第安纳州FedEx枪击案 枪手自尽 – 法国国际广播电台 - RFI](/articles/rfi/1031713.md)
-
-4-16 [四月新鲜蔬菜上市 - 法国美食](/articles/rfi/1031714.md)
-
-4-16 [董建华骆惠宁出席国家安全会黄浩铭乘机抗议](/articles/rfi/1031715.md)
 
