--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-21 [疑似来自中国的黑客对欧美进行间谍活动](/articles/dw/1042876.md)
+
 4-21 [弗洛伊德案裁决出炉 警官三项罪名成立](/articles/dw/1042877.md)
 
 4-20 [首飞成功! 在火星](/articles/dw/1042878.md)
@@ -598,6 +600,4 @@
 4-3 [白宫取消前总统特朗普对国际刑事法院的制裁](/articles/dw/1043174.md)
 
 4-3 [人权团体：缅甸政变至今逾550平民丧生](/articles/dw/1043175.md)
-
-4-3 [德国总统发表讲话：让我们共同战疫吧！](/articles/dw/1043176.md)
 
