--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-21 [秦刚或任中国驻美大使 美派伯恩斯驻京](/articles/dw/1042875.md)
+
 4-21 [疑似来自中国的黑客对欧美进行间谍活动](/articles/dw/1042876.md)
 
 4-21 [弗洛伊德案裁决出炉 警官三项罪名成立](/articles/dw/1042877.md)
@@ -598,6 +600,4 @@
 4-3 [台铁40年最严重火车事故 台湾降半旗悼念](/articles/dw/1043173.md)
 
 4-3 [白宫取消前总统特朗普对国际刑事法院的制裁](/articles/dw/1043174.md)
-
-4-3 [人权团体：缅甸政变至今逾550平民丧生](/articles/dw/1043175.md)
 
