--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-21 [暂时搁置争议 习近平将出席白宫气候峰会视讯会议](/articles/voa/1041362.md)
+
 4-21 [拜登将在地球日峰会直击气候变化](/articles/voa/1041363.md)
 
 4-21 [国际特赦：2020年全球死刑进一步减少 中国仍是处死人最多国家](/articles/voa/1041364.md)
@@ -598,6 +600,4 @@
 4-8 [志愿巡逻队守护亚裔社区](/articles/voa/1041660.md)
 
 4-8 [美国务院否认抵制北京冬奥 将比赛移师他国呼声四起](/articles/voa/1041661.md)
-
-4-8 [美国恢复向巴勒斯坦人提供援助](/articles/voa/1041662.md)
 
