--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-21 [【网络民议】新垣结衣代言H&M  “爱国网民”：政治面前无老婆](/articles/cdt/383436.md)
+
 4-21 [WHU性别性向平等研究会 | 关于性平会工作停止的说明](/articles/cdt/383440.md)
 
 4-21 [TP工厂｜网暴中心的女权者（续）：巨大的恐惧中，“记得我们真实的生活”](/articles/cdt/383453.md)
@@ -598,6 +600,4 @@
 3-20 [海边的西塞罗 | 给讲《石壕吏》的康震教授，普及一点诗歌常识](/articles/cdt/384783.md)
 
 3-20 [澎湃思想市场 | “杀马特”进入主流视野之路：审美自由掩盖的农民工困境](/articles/cdt/384785.md)
-
-3-20 [【立此存照】网信办、公安部约谈11家企业 为中国版Clubhouse“划红线”](/articles/cdt/384787.md)
 
