--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-21 [张忠谋评台积电优势 美国人才敬业难及台湾  中国落后5年](/articles/rfa/1045809.md)
+
 4-21 [中国个人负债增速世界前列  银行卡债务超美](/articles/rfa/1045810.md)
 
 4-21 [官媒民调:  九成中国年轻人“平视”、“俯视”西方](/articles/rfa/1045811.md)
@@ -598,6 +600,4 @@
 3-20 [我的孩子在哪里？维吾尔人骨肉分离的恶梦](/articles/rfa/1046107.md)
 
 3-19 [对穆斯林打压持续升级 中共将云南变成另一个新疆？](/articles/rfa/1046108.md)
-
-3-19 [涉“煽颠”陈建芳庭上解雇律师  王宇欲介入反遭警察控制](/articles/rfa/1046109.md)
 
