--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+4-21 [为什么多路资本争相涌入新能源车赛道？](/articles/ft/1045723.md)
+
 4-21 [肖万谋杀弗洛伊德罪名成立](/articles/ft/1045724.md)
 
 4-21 [“电信现实主义”？——评布鲁金斯学会报告《历史映照华为》](/articles/ft/1045725.md)
@@ -598,6 +600,4 @@
 2-22 [谷歌之后，轮到Facebook和澳政府对撼](/articles/ft/1046021.md)
 
 2-22 [房地产究竟怎样影响城市消费？](/articles/ft/1046022.md)
-
-2-22 [比特币正在成为一头灰犀牛吗？](/articles/ft/1046023.md)
 
