--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-21 [中国政府网络间谍组织被指利用VPN安全漏洞攻入美国敏感机构的网络](/articles/voa/1041360.md)
+
 4-21 [美军高官：中国在吉布提扩建的军港能容纳航母靠港](/articles/voa/1041361.md)
 
 4-21 [暂时搁置争议 习近平将出席白宫气候峰会视讯会议](/articles/voa/1041362.md)
@@ -598,6 +600,4 @@
 4-8 [拜登政府对中国关税政策将采取攻守并重策略](/articles/voa/1041658.md)
 
 4-8 [美国对北京恐吓台湾表达“极大关切”](/articles/voa/1041659.md)
-
-4-8 [志愿巡逻队守护亚裔社区](/articles/voa/1041660.md)
 
