--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,12 @@
 路透
 ------
 
+4-21 [美国参议院继续推进对抗中国的全面性议案](/articles/reuters/1038987.md)
+
+4-21 [尽管不排除美元短期有偶然反弹可能 但上行风险相当有限--瑞银财富管理](/articles/reuters/1038988.md)
+
+4-21 [美国12州长致信拜登总统 呼吁支持2035年之前逐步停止汽油车销售](/articles/reuters/1038989.md)
+
 4-21 [德意志交易所周五收市前将把加密货币交易所Coinbase股票摘牌](/articles/reuters/1038990.md)
 
 4-21 [中国一季度全国一般公共预算收入同比增24.2% 支出增6.2%--财政部](/articles/reuters/1038991.md)
@@ -594,10 +600,4 @@
 4-15 [中国股市收跌 GDP数据公布在即市场笼罩政策收紧担忧](/articles/reuters/1039285.md)
 
 4-15 [中国外交部：日本决定排放福岛核污水入海 中国和韩国采取共同立场](/articles/reuters/1039286.md)
-
-4-15 [焦点：日美领导人峰会料强调日本在美国对华战略中的核心作用](/articles/reuters/1039287.md)
-
-4-15 [焦点：中国华融遇险殃及中资投资级美元债 重树信心待后续处置方案](/articles/reuters/1039288.md)
-
-4-15 [投资者担心美国施压日本对华强硬 日相访美前与中国相关日企股票下跌](/articles/reuters/1039289.md)
 
