--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-21 [中国国产疫苗短缺 部分居民未能及时打第二剂](/articles/voa/1041358.md)
+
 4-21 [海上军力擂台越筑越高 台湾获美日等盟友鼎力支持](/articles/voa/1041359.md)
 
 4-21 [中国政府网络间谍组织被指利用VPN安全漏洞攻入美国敏感机构的网络](/articles/voa/1041360.md)
@@ -598,6 +600,4 @@
 4-8 [彼得·泰尔称中国或将比特币用作对付美国的“金融武器”](/articles/voa/1041656.md)
 
 4-8 [美国关注中国“海上民兵船”大规模聚集牛轭礁 重申坚定支持菲律宾](/articles/voa/1041657.md)
-
-4-8 [拜登政府对中国关税政策将采取攻守并重策略](/articles/voa/1041658.md)
 
