--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-21 [日本国会成立支援南蒙古议会联盟](/articles/rfa/1045807.md)
+
 4-21 [新冠疫苗致死成网络禁语  网民发视频被拘留](/articles/rfa/1045808.md)
 
 4-21 [张忠谋评台积电优势 美国人才敬业难及台湾  中国落后5年](/articles/rfa/1045809.md)
@@ -598,6 +600,4 @@
 3-20 [斯帕弗秘密接受庭审  加拿大批中国司法缺乏透明](/articles/rfa/1046105.md)
 
 3-20 [北欧第二国：挪威关闭孔子学院](/articles/rfa/1046106.md)
-
-3-20 [我的孩子在哪里？维吾尔人骨肉分离的恶梦](/articles/rfa/1046107.md)
 
