--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-21 [日本首相菅义伟向靖国神社供奉祭品](/articles/voa/1041357.md)
+
 4-21 [中国国产疫苗短缺 部分居民未能及时打第二剂](/articles/voa/1041358.md)
 
 4-21 [海上军力擂台越筑越高 台湾获美日等盟友鼎力支持](/articles/voa/1041359.md)
@@ -598,6 +600,4 @@
 4-8 [印度新冠感染者日增12万6千再破记录 新西兰暂禁来自印度旅客入境](/articles/voa/1041655.md)
 
 4-8 [彼得·泰尔称中国或将比特币用作对付美国的“金融武器”](/articles/voa/1041656.md)
-
-4-8 [美国关注中国“海上民兵船”大规模聚集牛轭礁 重申坚定支持菲律宾](/articles/voa/1041657.md)
 
