--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+4-22 [菅义伟称日本不会军事介入台海冲突](/articles/voa/1041354.md)
+
+4-22 [时事大家谈: 温家宝为何要发声？为何被禁言？](/articles/voa/1041355.md)
+
+4-21 [拜登与习近平不会在气候峰会上进行双边会谈](/articles/voa/1041356.md)
+
 4-21 [日本首相菅义伟向靖国神社供奉祭品](/articles/voa/1041357.md)
 
 4-21 [中国国产疫苗短缺 部分居民未能及时打第二剂](/articles/voa/1041358.md)
@@ -594,10 +600,4 @@
 4-8 [外国公司在华进退维谷 撤离、硬挺或“一公司两制”](/articles/voa/1041652.md)
 
 4-8 [世行和IMF拟在减债机制中加入气变开支因素](/articles/voa/1041653.md)
-
-4-8 [格陵兰最大反对党赢得选举 将叫停中国作为最大股东的稀土开采项目](/articles/voa/1041654.md)
-
-4-8 [印度新冠感染者日增12万6千再破记录 新西兰暂禁来自印度旅客入境](/articles/voa/1041655.md)
-
-4-8 [彼得·泰尔称中国或将比特币用作对付美国的“金融武器”](/articles/voa/1041656.md)
 
