--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-22 [赠疫苗给西巴尔干国家 欧盟对抗中俄疫苗外交](/articles/rfa/1045803.md)
+
 4-22 [加拿大海底捞店内摄像镜头众多   员工和专家忧虑安全隐私外泄](/articles/rfa/1045804.md)
 
 4-21 [台官员诠释两岸"建设性模糊" ：善意的谅解](/articles/rfa/1045805.md)
@@ -598,6 +600,4 @@
 3-20 [中国数字丝绸之路曝安全隐忧](/articles/rfa/1046101.md)
 
 3-20 [2034美中开战？一本小说描述的美中误判的残酷后果](/articles/rfa/1046102.md)
-
-3-20 [美国加强与湄公河国家合作 中国酸溜溜？](/articles/rfa/1046103.md)
 
