--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+4-22 [欧盟斡旋格鲁吉亚2020议会选举危机](/articles/rfi/1031349.md)
+
 4-22 [全球COVID-19死亡逾304万例  确诊1亿4283万多 – 法国国际广播电台 - RFI](/articles/rfi/1031350.md)
 
 4-22 [印度新一波Covid病毒疫情来势汹涌](/articles/rfi/1031351.md)
@@ -598,6 +600,4 @@
 4-17 [欧盟：香港事态发展使人质疑中国是否有意愿履行其国际承诺](/articles/rfi/1031647.md)
 
 4-17 [中国反制冰岛一名律师 冰岛外长：不可接受](/articles/rfi/1031648.md)
-
-4-17 [拜登菅义伟峰会 美日摆出抗中阵线 – 法国国际广播电台 - RFI](/articles/rfi/1031649.md)
 
