--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+4-22 [印尼海军潜艇失联 请求澳大利亚、新加坡和印度协助搜寻](/articles/voa/1041347.md)
+
+4-22 [为欧洲智库仗义执言的华盛顿智库遭中国封禁](/articles/voa/1041348.md)
+
+4-22 [香港世界新闻自由指数续排名80 记协指国安法下寒蝉效应恶化](/articles/voa/1041349.md)
+
 4-22 [TikTok在英国被控非法获取儿童个人信息 或被罚数十亿美元](/articles/voa/1041350.md)
 
 4-22 [报告称中国和缅甸等国严重侵犯宗教自由](/articles/voa/1041351.md)
@@ -594,10 +600,4 @@
 4-8 [主要经济体将为IMF注资6,500亿美元](/articles/voa/1041645.md)
 
 4-8 [拜登即将宣布措施遏制枪支暴力](/articles/voa/1041646.md)
-
-4-8 [弗洛伊德谋杀案庭审 专家究责警方过当使用武力](/articles/voa/1041647.md)
-
-4-8 [中国云南瑞丽市委书记因疫情防控“失职”被撤职调查](/articles/voa/1041648.md)
-
-4-8 [称履行对港人责任 英国斥资4300万英镑助BNO港人居英](/articles/voa/1041649.md)
 
