--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,12 @@
 自由亚洲电台
 ------
 
+4-22 [习近平将出席气候峰会 可能做出新承诺](/articles/rfa/1045800.md)
+
+4-22 [传美中互派大使人选已定  伯恩斯、秦刚何许人也？](/articles/rfa/1045801.md)
+
+4-22 [维权律师陈科云遇袭   疑受国保骚扰](/articles/rfa/1045802.md)
+
 4-22 [赠疫苗给西巴尔干国家 欧盟对抗中俄疫苗外交](/articles/rfa/1045803.md)
 
 4-22 [加拿大海底捞店内摄像镜头众多   员工和专家忧虑安全隐私外泄](/articles/rfa/1045804.md)
@@ -594,10 +600,4 @@
 3-22 [台湾11.7万剂新冠疫苗开打 行政院长苏贞昌带头打](/articles/rfa/1046098.md)
 
 3-20 [是什么让“五毛” 油管网红郑国成愤怒？](/articles/rfa/1046099.md)
-
-3-20 [外交官全面“战狼化”       余茂春: 中共外交大失败](/articles/rfa/1046100.md)
-
-3-20 [中国数字丝绸之路曝安全隐忧](/articles/rfa/1046101.md)
-
-3-20 [2034美中开战？一本小说描述的美中误判的残酷后果](/articles/rfa/1046102.md)
 
