--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-22 [世界领导人计划在美国主办的气候峰会上讲话](/articles/voa/1041340.md)
+
 4-22 [欧盟宣布加强人工智能管理的建议措施](/articles/voa/1041341.md)
 
 4-22 [美司法部宣布对明尼阿波利斯警察局警务做法展开调查](/articles/voa/1041342.md)
@@ -598,6 +600,4 @@
 4-9 [美国制裁缅甸珠宝行业](/articles/voa/1041638.md)
 
 4-9 [中国人大修改后香港选委会及立法会组成 民主党未定参选否](/articles/voa/1041639.md)
-
-4-9 [被撤换缅甸驻英大使敦促英国不要承认军政府使节](/articles/voa/1041640.md)
 
