--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,18 @@
 美国之音
 ------
 
+4-22 [谴责北京种族灭绝行为 美众院外委会通过两项涉新疆人权议案](/articles/voa/1041333.md)
+
+4-22 [中国强劲经济数据的背后：增长是否可持续？](/articles/voa/1041334.md)
+
+4-22 [印度22名新冠病人死于氧气供应中断](/articles/voa/1041335.md)
+
+4-22 [美太空司令：中国太空力量对美国构成步步进逼的挑战](/articles/voa/1041336.md)
+
+4-22 [“中国行动计划”最新起诉：数学教授被控获取美联邦研究资金同时隐瞒与中国关系](/articles/voa/1041337.md)
+
+4-22 [白宫要义: 白宫回应澳洲取消一带一路项目](/articles/voa/1041338.md)
+
 4-22 [拜登对美国能向其他国家提供新冠疫苗表示有信心](/articles/voa/1041339.md)
 
 4-22 [世界领导人计划在美国主办的气候峰会上讲话](/articles/voa/1041340.md)
@@ -588,16 +600,4 @@
 4-9 [白宫要义: 美国安会: 与民主盟友合作 拓展台湾国际空间](/articles/voa/1041631.md)
 
 4-9 [新冠疫情过后 在家远程办公还能持久吗？](/articles/voa/1041632.md)
-
-4-9 [被电视认罪5年后，他让央视在全球丢执照、被调查](/articles/voa/1041633.md)
-
-4-9 [拜登采取遏制美国枪支暴力的措施](/articles/voa/1041634.md)
-
-4-9 [美参议院推出两党议案，加强与中国的全面战略竞争](/articles/voa/1041635.md)
-
-4-9 [美法官驳回针对百度的股东诉讼案](/articles/voa/1041636.md)
-
-4-9 [时事大家谈: 拜登要斥巨资推基建，北京是喜是忧？](/articles/voa/1041637.md)
-
-4-9 [美国制裁缅甸珠宝行业](/articles/voa/1041638.md)
 
