--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+4-22 [纳瓦尼健康恶化 俄数千人上街抗议声援 – 法国国际广播电台 - RFI](/articles/rfi/1031330.md)
+
+4-22 [美股收高 结束连两天跌势 – 法国国际广播电台 - RFI](/articles/rfi/1031331.md)
+
 4-22 [美国联邦参议院通过主张持续对台军售的阿基里诺印太司令提名](/articles/rfi/1031332.md)
 
 4-22 [巴基斯坦饭店爆炸造成4死 中国大使躲过一劫 – 法国国际广播电台 - RFI](/articles/rfi/1031333.md)
@@ -596,8 +600,4 @@
 4-18 [首次面谈后 美日首脑发表罕见超长联合声明陈述共同愿景 - 要闻解说](/articles/rfi/1031628.md)
 
 4-18 [印度Covid疫苗生产商请美国解除禁运](/articles/rfi/1031629.md)
-
-4-17 [美前国安顾问：为什么特朗普对华强硬，拜登也会效仿](/articles/rfi/1031630.md)
-
-4-17 [加拿大助港人移民计划首3周获逾500份申请](/articles/rfi/1031631.md)
 
