--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-22 [与中国全面竞争：美参院跨党派合作推进外交与技术投资两大法案](/articles/voa/1041327.md)
+
+4-22 [美国老人欢呼打过疫苗有如终于出狱](/articles/voa/1041328.md)
+
 4-22 [巴拉圭总统：不接受中国疫苗外交“勒索”](/articles/voa/1041329.md)
 
 4-22 [新冠大流行重创人们心理健康](/articles/voa/1041330.md)
@@ -596,8 +600,4 @@
 4-9 [金正恩将朝鲜经济困境与1990年代饥荒相提并论](/articles/voa/1041625.md)
 
 4-9 [步步为营 美检察官为立案起诉“誓言守护者”创始人而努力](/articles/voa/1041626.md)
-
-4-9 [美情报部门发表报告 对社会撕裂和冲突可能性提出警告](/articles/voa/1041627.md)
-
-4-9 [贝尔法斯特骚乱：英国脱欧引发分裂 教派暴力危险重现](/articles/voa/1041628.md)
 
