--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,10 @@
 路透
 ------
 
+4-22 [全球石油需求将在2026年达到峰值 较之前预期早了两年--睿咨得能源](/articles/reuters/1038952.md)
+
+4-22 [山西邀160余家金融机构考察国企 今年已刚兑800多亿债券再强调不会违约](/articles/reuters/1038953.md)
+
 4-22 [新加坡与香港取消宣布航空泡泡--彭博新闻](/articles/reuters/1038954.md)
 
 4-22 [德国外长称与中国脱钩是错误做法 劝欧盟保持接触](/articles/reuters/1038955.md)
@@ -596,8 +600,4 @@
 4-16 [旧金山联储总裁戴利称未到缩减购债的时候 仍离目标很远](/articles/reuters/1039250.md)
 
 4-16 [美国为定期接种新冠疫苗加强针做准备 辉瑞执行长认为有这种必要](/articles/reuters/1039251.md)
-
-4-16 [中国市监总局：阿里巴巴等第三批11家互联网企业发布合规经营承诺书](/articles/reuters/1039252.md)
-
-4-16 [日本日产汽车5月将大幅削减国内产量 因芯片短缺--消息](/articles/reuters/1039253.md)
 
