--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-22 [美军司令：中国新核能设施恐产生大量制造核武的钚](/articles/dw/1042856.md)
+
 4-22 [拜登希望就气候问题团结全世界](/articles/dw/1042857.md)
 
 4-22 [台积电创办人张忠谋：台湾应守住半导体製造](/articles/dw/1042858.md)
@@ -598,6 +600,4 @@
 4-4 [墙外文摘：“棉花战争”只是一场序曲？](/articles/dw/1043154.md)
 
 4-4 [教宗发表复活节文告 呼吁公平分配疫苗](/articles/dw/1043155.md)
-
-4-4 [菅义伟盼美日合作缓和两岸局势](/articles/dw/1043156.md)
 
