--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+4-22 [我们打赢了弗洛伊德这一仗，但这场战争远未结束](/articles/nyt/1046938.md)
+
 4-22 [巴基斯坦酒店发生致命爆炸，中国大使险些遇险](/articles/nyt/1046939.md)
 
 4-22 [香港90岁老妇遭电话诈骗，损失2.5亿港元](/articles/nyt/1046940.md)
@@ -598,6 +600,4 @@
 2-1 [郭文贵、特朗普和对事实的战争](/articles/nyt/1047236.md)
 
 1-29 [华为如何在海外开展影响力宣传攻势](/articles/nyt/1047237.md)
-
-1-29 [藏语倡导者扎西文色获释](/articles/nyt/1047238.md)
 
