--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,12 @@
 路透
 ------
 
+4-22 [分析：全球房价“涨”声一片 央行计不计入通胀是个问题](/articles/reuters/1038943.md)
+
+4-22 [调查：多数亚币人气空转多 但印度卢比看跌押注急升至一年最高](/articles/reuters/1038944.md)
+
+4-22 [热点聚焦：从“海胆维权”到特斯拉深夜道歉 中国消费环境改善刻不容缓](/articles/reuters/1038945.md)
+
 4-22 [瑞士信贷第一季净亏2.52亿瑞郎 美国Archegos相关损失抹杀交易获利](/articles/reuters/1038946.md)
 
 4-22 [现代汽车第一季净利增长187% 豪华车需求热络](/articles/reuters/1038947.md)
@@ -594,10 +600,4 @@
 4-16 [日本央行总裁暗示有讨论货币政策在气候变化方面作用的空间](/articles/reuters/1039241.md)
 
 4-16 [综述：美国3月零售销售创10个月最大升幅 初请失业金人数降至逾一年最低](/articles/reuters/1039242.md)
-
-4-16 [戴琪呼吁采取大胆行动 将气候问题置于贸易政策的中心](/articles/reuters/1039243.md)
-
-4-16 [综述：欧元区增长预估大幅调降 疫苗接种缓慢是最大风险--路透调查](/articles/reuters/1039244.md)
-
-4-16 [日本疫情进入第四波 紧急举措实施地区料扩大至10个](/articles/reuters/1039245.md)
 
