--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,14 @@
 法广
 ------
 
+4-22 [习近平视察后 清华宣布成立积体电路学院攻克遭“卡脖子”芯片技术](/articles/rfi/1031315.md)
+
+4-22 [巴基斯坦西南部酒店爆炸案 中国大使当时不在店内](/articles/rfi/1031316.md)
+
+4-22 [香奈儿标识横环与华为竖环商标抄袭诉讼 在欧洲败了](/articles/rfi/1031317.md)
+
+4-22 [铜锣湾书店林荣基被泼红漆三被告获加 6 至 8 个月刑期](/articles/rfi/1031318.md)
+
 4-22 [路透社引述法官指香港“不寻常折磨” 迎来中国式公审](/articles/rfi/1031319.md)
 
 4-22 [马道立退休开腔指定法官安排“奇怪”](/articles/rfi/1031320.md)
@@ -592,12 +600,4 @@
 4-18 [美中发表联合声明 承诺共同合作因应气候危机 – 法国国际广播电台 - RFI](/articles/rfi/1031613.md)
 
 4-18 [拜登打高球 上任后第一次 – 法国国际广播电台 - RFI](/articles/rfi/1031614.md)
-
-4-18 [中国可能将对德国BionTech疫苗开绿灯](/articles/rfi/1031615.md)
-
-4-18 [日本联美抗中迈出一大步 - 要闻分析](/articles/rfi/1031616.md)
-
-4-18 [拜登气候特使克里结束访华行程 全程低调 曾与韩正举行远程视讯会谈](/articles/rfi/1031617.md)
-
-4-18 [温家宝深情忆母 谈中南海做官如临深渊](/articles/rfi/1031618.md)
 
