--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-22 [美国之音｜“习近平家人信息泄露案” 二审即将宣判 牛腾宇母亲呼唤公平正义](/articles/cdt/383407.md)
+
 4-22 [【异闻观止】环球网｜最新民调：过半中国青年“西方观”因疫情改变](/articles/cdt/383409.md)
 
 4-22 [封面新闻｜“女子5年4次起诉离婚被驳回案”第5次开庭延期 宁顺花：很失落](/articles/cdt/383411.md)
@@ -598,6 +600,4 @@
 3-21 [全现在 | 从“小镇做题家”到“小镇演讲家”：分数不能给我安全感了，但钱可以](/articles/cdt/384717.md)
 
 3-21 [【朋友圈】遗老](/articles/cdt/384727.md)
-
-3-21 [北京大学出版社 | 1933年的今天纳粹建立第一个集中营，不少人表示支持](/articles/cdt/384730.md)
 
