--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-22 [欧中投资协定遭遇强劲阻力](/articles/dw/1042847.md)
+
 4-22 [急刹车：德国传染病防治法增补草案作何规定？](/articles/dw/1042848.md)
 
 4-22 [载有53人的印尼潜艇失联 “氧气够支持72小时”](/articles/dw/1042849.md)
@@ -598,6 +600,4 @@
 4-5 [教宗方济各: 复活的宣告是永不落空的希望](/articles/dw/1043145.md)
 
 4-5 [一波未平一波又起 越南网友声称抵制H&M](/articles/dw/1043146.md)
-
-4-5 [太鲁阁事故：交通部长请辞 行车安全再成焦点](/articles/dw/1043147.md)
 
