--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-22 [达赖喇嘛访台困难？ 西藏流亡政府新驻台代表：尊重台湾外交政策](/articles/rfa/1045793.md)
+
 4-22 [香港法院无视传媒第四权  首判调查记者有罪](/articles/rfa/1045794.md)
 
 4-22 [上海前首富周正毅60岁生日晚宴   官媒6名主持人捧场入“黑名单”](/articles/rfa/1045795.md)
@@ -598,6 +600,4 @@
 3-23 [中国民兵船疑现身南海 菲律宾促召回](/articles/rfa/1046091.md)
 
 3-23 [康明凯遭秘密审讯   26个国外交官法庭外声援加拿大](/articles/rfa/1046092.md)
-
-3-23 [日美罕见明示将合作应对台海冲突](/articles/rfa/1046093.md)
 
