--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -7,7 +7,7 @@
 
 4-22 [美国之音｜“习近平家人信息泄露案” 二审即将宣判 牛腾宇母亲呼唤公平正义](/articles/cdt/383407.md)
 
-4-22 [【异闻观止】环球网｜最新民调：过半中国青年“西方观”因疫情改变](/articles/cdt/383409.md)
+4-22 [环球网｜最新民调：过半中国青年“西方观”因疫情改变](/articles/cdt/383409.md)
 
 4-22 [封面新闻｜“女子5年4次起诉离婚被驳回案”第5次开庭延期 宁顺花：很失落](/articles/cdt/383411.md)
 
